# mrtccsl

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  cliff.toml  compile-reaction.sh  dune-project  mrtccsl.opam  mrtccsl.opam.template  no_constraint_trace.txt  probability.gnu  profile.sh  update-docs.sh  visualize-reaction.sh
data/c1/: 0_trace.cadp  0_trace.svgbob
data/c2/: 0_trace.svgbob
data/c3/: 0_trace.cadp  0_trace.svgbob
data/c4/: 0_reaction_times.csv  0_trace.svgbob
doc/: index.mld
docs/: index.html  sherlodoc.js
docs/mrtccsl/: db.js  index.html
docs/mrtccsl/Boolean/: index.html
docs/mrtccsl/Boolean/DNF/: index.html
docs/mrtccsl/CauseEffect/: index.html
docs/mrtccsl/CauseEffect/EventEqTransition/: index.html
docs/mrtccsl/CauseEffect/Network/: index.html
docs/mrtccsl/CauseEffect/module-type-ID/: index.html
docs/mrtccsl/CauseEffect/module-type-IDs/: index.html
docs/mrtccsl/CauseEffect/module-type-Time/: index.html
docs/mrtccsl/Common/: index.html
docs/mrtccsl/Common/Boolean/: index.html
docs/mrtccsl/Common/Expr/: index.html
docs/mrtccsl/Common/Interface/: index.html
docs/mrtccsl/Common/Interval/: index.html
docs/mrtccsl/Common/Number/: index.html
docs/mrtccsl/Common/Prelude/: index.html
docs/mrtccsl/Common/Stats/: index.html
docs/mrtccsl/Common/Trace/: index.html
docs/mrtccsl/Expr/: index.html
docs/mrtccsl/Interface/: index.html
docs/mrtccsl/Interface/Concrete/: index.html
docs/mrtccsl/Interface/ExpOrder/: index.html
docs/mrtccsl/Interface/Make/: index.html
docs/mrtccsl/Interface/Number/: index.html
docs/mrtccsl/Interface/module-type-Debug/: index.html
docs/mrtccsl/Interval/: index.html
docs/mrtccsl/Interval/Make/: index.html
docs/mrtccsl/Label/: index.html
docs/mrtccsl/Mrtccsl/: index.html
docs/mrtccsl/Mrtccslparsing/: index.html
docs/mrtccsl/Number/: index.html
docs/mrtccsl/Prelude/: index.html
docs/mrtccsl/STS/: index.html
docs/mrtccsl/Stats/: index.html
docs/mrtccsl/Symbolic/: index.html
lib/: ast.ml  automata.ml  clock.ml  dune  interface.ml  interval.ml  misc.ml  number.ml  prelude.ml  rtccsl.ml  time.ml
lib/STS/: STS.ml  def.ml  dune  syntax.ml
lib/STS/interpretation/: aux.ml  diagram.ml  full.ml  interpretation.ml  partial.ml
lib/analysis/: analysis.ml  denotational.ml  domain.ml  functional_chain.ml  induction.ml
lib/automata/: automata.ml  simple.ml
lib/causeEffect/: CCS.ml  causeEffect.ml  declaration.ml  dune  extraction.ml  impl.ml  reaction.ml  signature.ml  test.ml  token.ml  v1.ml  v2.ml
lib/common/: common.ml  dune  expr.ml  interface.ml  prelude.ml  stats.ml  trace.ml
lib/common/number/: fixed.ml  float.ml  rational.ml
lib/halsoa/: definition.ml  domain.ml  dune  examples.ml  semantics.ml
lib/mrtccsl/: causalEffect.ml  clock.ml  dune  interval.ml  mrtccsl.ml  priority.ml  rtccsl.ml  time.ml  trace.ml  traceImpl.ml
lib/mrtccsl/analysis/: denotational.ml  domain.ml  functional_chain.ml  induction.ml
lib/mrtccsl/automata/: automata.ml  export.ml  simple.ml  symbolic.ml  trace.ml
lib/mrtccsl/backend/: backend.ml  machine.ml  naive.ml  trace.ml
lib/mrtccsl/ccsl/: ccsl.ml  examples.ml  language.ml  microstep.ml  view.ml
lib/mrtccsl/optimization/: optimization.ml  order.ml
lib/mrtccsl/parsing/: ast.ml  loc.ml  parser.mly  parsing.ml
lib/mrtccslparsing/: Mrtccslparsing.ml  ast.ml  compile.ml  dune  lexer.mll  loc.ml  parse.ml  parser.mly  syntax.ebnf
lib/number/: dune  float.ml  integer.ml  number.ml  rational.ml
lib/parsing/: ast.ml  dune  lexer.mll  newrtccsl.ml  parser.mly  parsing.ml  typing.ml
lib/std/: boolean.ml  distribution.ml  dune  expr.ml  interface.ml  interval.ml  label.ml  matrix.ml  prelude.ml  stats.ml
lib/std/number/: BigInteger.ml  fixed.ml  float.ml  integer.ml  rational.ml
lib/symbolic/: dune  machine.ml
plots/: probability.gnu
plots/data/: c1_normal_16cores_reaction_times.csv  c1_normal_2cores_reaction_times.csv  c1_uniform_16cores_reaction_times.csv  c2_normal_16cores_reaction_times.csv  c2_normal_2cores_reaction_times.csv  c2_uniform_16cores_reaction_times.csv  c2_uniform_2cores_reaction_times.csv  c3_normal_16cores_reaction_times.csv  c3_normal_2cores_reaction_times.csv  c3_uniform_16cores_reaction_times.csv  c3_uniform_2cores_reaction_times.csv  c4_normal_16cores_reaction_times.csv  c4_normal_2cores_reaction_times.csv  c4_uniform_16cores_reaction_times.csv  c4_uniform_2cores_reaction_times.csv  c5_normal_16cores.txt  c5_normal_16cores_reaction_times.csv  c5_normal_2cores.txt  c5_normal_2cores_reaction_times.csv  c5_uniform_16cores.txt  c5_uniform_16cores_reaction_times.csv  c5_uniform_2cores_reaction_times.csv  certain1_reaction_times.csv  no_constraint_reaction_times.csv  reaction_times.txt  simpy_normal_1res_reaction_times.csv  simpy_normal_nores_reaction_times.csv  simpy_uniform_1res_reaction_times.csv  simpy_uniform_nores_reaction_times.csv  uncertain1_reaction_times.csv  uncertain2_reaction_times.csv
test/: correctness.ml  dune  induction.ml  naive.ml  parser.ml  simple.ml  symbolic.ml
test/code/: basic_platform.mrtccsl  bbw.mrtccsl  empty.mrtccsl  features.mrtccsl  hal4sdv.mrtccsl  mlv.mrtccsl  with_constraints.mrtccsl  with_constraints_variables_only.mrtccsl
test/code/abz2014/: chains  system.mrtccsl
test/code/aebs/: complex.mrtccsl
test/code/cause_network/: microstep.sexp  network.sexp  spec.mrtccsl  tasks
test/code/future/: mlv.mrtccsl  spark-control.mrtccsl
test/code/hal4sdv/: c1.mrtccsl  c12.mrtccsl  c2.mrtccsl  c3.mrtccsl  c4.mrtccsl  chains  chains12
test/code/realistic_schedule/: spec.mrtccsl  tasks
traces/: c1_normal_16cores.txt  c1_normal_2cores.txt  c1_uniform_16cores.txt  c2_normal_16cores.txt  c2_normal_2cores.txt  c2_uniform_16cores.txt  c2_uniform_2cores.txt  c3_normal_16cores.txt  c3_normal_2cores.txt  c3_uniform_16cores.txt  c3_uniform_2cores.txt  c4_normal_16cores.txt  c4_normal_2cores.txt  c4_uniform_16cores.txt  c4_uniform_2cores.txt  c5_normal_16cores.txt  c5_normal_2cores.txt  simpy_normal_1res.txt  simpy_normal_nores.txt  simpy_uniform_1res.txt  simpy_uniform_nores.txt
(+885 files in other folders)
