(include_subdirs unqualified)

(library
 (name mrtccsl)
 (public_name mrtccsl)
 (inline_tests)
 (libraries gmp apron apron.polkaMPQ vpl-core ocamlgraph uuseg menhirLib spectrum containers cudd)
 (preprocess
  (pps ppx_inline_test ppx_assert ppx_sexp_conv ppx_compare)))


(env
 (dev
  (flags
   (:standard -warn-error -32))))
