(test
 (name naive)
 (modules naive correctness)
 (libraries mrtccsl alcotest))

(test
 (name symbolic)
 (modules symbolic correctness)
 (libraries mrtccsl alcotest))

(test
 (name induction)
 (modules induction)
 (libraries mrtccsl alcotest))

(test
 (name parser)
 (libraries mrtccsl.mrtccslparsing mrtccsl)
 (deps
  (glob_files code/*.mrtccsl)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
