(include_subdirs qualified)

(library
 (public_name mrtccsl.sts)
 (name sts)
 (inline_tests)
 (wrapped false)
 (modules STS)
 (libraries sexplib0 common vpl-core)
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_sexp_conv
   ppx_compare
   ppx_deriving.show)))

(env
 (dev
  (flags
   (:standard -warn-error -32))))
