(include_subdirs qualified)

(library
 (public_name mrtccsl.sts)
 (name sts)
 (inline_tests)
 (wrapped false)
 (libraries sexplib0 common vpl-core mlbdd gbddml)
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_sexp_conv
   ppx_compare
   ppx_deriving.show
   ppx_deriving.map
   ppx_deriving.fold
   )))

(env
 (dev
  (flags
   (:standard -warn-error -32))))
