(include_subdirs qualified)

(library
 (public_name mrtccsl.causeEffect)
 (name causeEffect)
 (inline_tests)
 (libraries sexplib0 sexplib common)
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_sexp_conv
   ppx_compare
   ppx_deriving.show)))

(env
 (dev
  (flags
   (:standard -warn-error -32))))
