(include_subdirs unqualified)

(library
 (name mrtccsl)
 (public_name mrtccsl)
 (inline_tests)
 (libraries
  apron
  apron.polkaMPQ
  vpl-core
  ocamlgraph
  menhirLib
  spectrum
  cudd
  number
  std
  owl)
 (preprocess
  (pps ppx_inline_test ppx_assert ppx_sexp_conv ppx_compare ppx_deriving.map ppx_deriving.show)))

(env
 (dev
  (flags
   (:standard -warn-error -32))))
