(include_subdirs unqualified)

(library
 (name mrtccsl)
 (public_name mrtccsl)
 (inline_tests)
 (libraries
  apron
  apron.polkaMPQ
  vpl-core
  ocamlgraph
  menhirLib
  ocolor
  cudd
  std
  iter
  owl
  bitvectorset)
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_sexp_conv
   ppx_compare
   ppx_deriving.map
   ppx_deriving.show
   ppx_deriving.fold
   )))

(env
 (dev
  (flags
   (:standard -warn-error -32)))
 (release
  (ocamlopt_flags
   (:standard -O3))))
