
(library
 (name mrtccslparsing)
 (public_name mrtccsl.mrtccslparsing)
 (inline_tests)
 (libraries
  menhirLib
  ocolor
  common
  mrtccsl
  )
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_sexp_conv
   ppx_compare
   ppx_deriving.map
   ppx_deriving.show
   ppx_deriving.fold
   )))

(menhir
 (modules parser)
 (flags --table)
  (infer true)
 )

(ocamllex (modules lexer))
