(include_subdirs qualified)

(library
 (public_name mrtccsl.symbolic)
 (name symbolic)
 (inline_tests)
 (libraries containers sexplib0 iter std)
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_sexp_conv
   ppx_compare
   ppx_deriving.show)))

(env
 (dev
  (flags
   (:standard -warn-error -32))))
